# hack-fevm

./: README.md  miner-config.toml
actors/: Cargo.toml  docker-compose.yml
actors/hidden-file-client/: Cargo.toml  LICENSE_MIT
actors/hidden-file-client/src/: lib.rs
actors/hidden-file-crypto/: Cargo.toml
actors/hidden-file-crypto/src/: lib.rs
actors/priv/test/: key.pem  public.pem
actors/storage/: Cargo.toml
actors/storage/src/: crypto.rs  lib.rs
actors/validator/: Cargo.toml
actors/validator/src/: lib.rs
frontend/: package.json
frontend/src/: App.tsx
frontend/src/ImageForm/: ImageForm.tsx
frontend/src/ImageLoader/: ImageLoader.tsx
frontend/src/TextForm/: TextForm.tsx
frontend/src/hooks/: useStatusState.ts
serialization-helper/: Cargo.toml
serialization-helper/src/: main.rs
simple-actor/: Cargo.toml
simple-actor/src/: lib.rs
simple-interaction/: .env  Cargo.toml
simple-interaction/src/: main.rs
sol-contracts/: .gitignore  hardhat.config.ts  package.json
sol-contracts/contracts/: Mark3dAccessToken.sol  Mark3dCollection.sol
sol-contracts/scripts/: create-collection.ts  deploy-access-token.ts  deploy-collection.ts  deploy-exchange.ts  deploy-fraud-decider.ts
