[package]
name = "simple_interaction"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
actix-cors = "0.6.4"
dotenvy = "0.15.6"
fvm_ipld_encoding = { git = "https://github.com/filecoin-project/ref-fvm.git" }
base64 = "0.13.1"
cid = { version = "0.8.4", default-features = false }
serde = { version = "1.0.136", features = ["derive"] }
serde_tuple = "0.5"
fvm_sdk = { git = "https://github.com/filecoin-project/ref-fvm.git" }
fvm_shared = { git = "https://github.com/filecoin-project/ref-fvm.git" }
num-bigint = "0.4"
libp2p = "0.49.0"
tokio = { version = "1.21.2", features = ["full"] }
async-process = "1.5.0"